--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,36 @@
-baseURL = 'https://example.org/'
+baseURL = '/'
 languageCode = 'en-us'
-theme = "LoveIt-0.3.0"
 title = '个人笔记'
+theme = 'LoveIt-0.3.0'
+
+# Theme parameters
+[params]
+  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  site_logo = ""
+  description = "The last theme you'll ever need"
+  body_classes = "avenir bg-near-white"
+
+# Menu Configuration
+[menu]
+  [[menu.main]]
+    identifier = "home"
+    name = "Home"
+    url = "/"
+    weight = 1
+  [[menu.main]]
+    identifier = "posts"
+    name = "posts"
+    url = "/posts/"
+    weight = 2
+  [[menu.main]]
+    identifier = "installation"
+    name = "Installation"
+    url = "/get-start/installation/"
+    weight = 3
+
+# Outputs configuration
+[outputs]
+  home = ["HTML", "RSS"]
+  section = ["HTML", "RSS"]
+  taxonomy = ["HTML"]
+  term = ["HTML"]
