--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://whyxieyue.github.io/'
+baseURL = 'http://whyxieyue.github.io/blog/'
 languageCode = 'en-us'
 title = '个人笔记'
 theme = 'LoveIt-0.3.0'
