--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,4 @@
-name: Hugo GitHub Pages
+name: Hugo Deploy
 
 on:
   push:
@@ -7,17 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -30,16 +21,27 @@ jobs:
         hugo-version: '0.154.5'
         extended: true
 
-    - name: Build
+    - name: Build for GitHub Pages
       run: hugo --minify
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-
-    - name: Upload artifact
+    - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./public
+
+  deploy-github-pages:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
 
     - name: Deploy to GitHub Pages
       id: deployment
