--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,4 @@
-name: Hugo Deploy
+name: Hugo Dual Deploy
 
 on:
   push:
@@ -7,8 +7,16 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -21,28 +29,17 @@ jobs:
         hugo-version: '0.154.5'
         extended: true
 
-    - name: Build for GitHub Pages
+    - name: Build site
       run: hugo --minify
-
-    - name: Upload GitHub Pages artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: ./public
-
-  deploy-github-pages:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
 
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
+
+    - name: Commit built files to repository
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add public/
+        git commit -m "Update built files [skip ci]" || exit 0
+        git push
