--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,4 @@
-name: Hugo Dual Deploy
+name: Hugo to Both Platforms
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -20,8 +20,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v3
@@ -29,17 +27,27 @@ jobs:
         hugo-version: '0.154.5'
         extended: true
 
-    - name: Build site
+    - name: Build Hugo site
       run: hugo --minify
 
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+    - name: Upload artifact for GitHub Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./public
 
-    - name: Commit built files to repository
+    - name: Commit public folder for EdgeOne
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add public/
-        git commit -m "Update built files [skip ci]" || exit 0
+        git commit -m "Update built files for EdgeOne [skip ci]" || exit 0
         git push
+
+  deploy-github-pages:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: deploy
+    steps:
+    - name: Deploy to GitHub Pages
+      uses: actions/deploy-pages@v4
