--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,4 @@
-name: Hugo to Both Platforms
+name: Hugo Deploy
 
 on:
   push:
@@ -9,17 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v3
@@ -27,27 +21,28 @@ jobs:
         hugo-version: '0.154.5'
         extended: true
 
-    - name: Build Hugo site
+    - name: Build for GitHub Pages
       run: hugo --minify
 
-    - name: Upload artifact for GitHub Pages
+    - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./public
-
-    - name: Commit public folder for EdgeOne
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add public/
-        git commit -m "Update built files for EdgeOne [skip ci]" || exit 0
-        git push
 
   deploy-github-pages:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      pages: deploy
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
     - name: Deploy to GitHub Pages
+      id: deployment
       uses: actions/deploy-pages@v4
