--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,7 +28,12 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./public
-
+        
+    - name: Deploy to EdgeOne Pages
+      run: npx edgeone pages deploy <outputDirectory> -n <projectName> -t ${{ secrets.EDGEONE_API_TOKEN }} [-e <env>]
+      env:
+          EDGEONE_API_TOKEN: ${{ secrets.EDGEONE_API_TOKEN }}
+          
   deploy-github-pages:
     runs-on: ubuntu-latest
     needs: build
