--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,11 +28,23 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./public
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22.11.0' # 选择适合的 Node.js 版本
+      
+    - name: Install dependencies
+      run: npm install
+      
+    - name: Build project
+      run: npm run build
         
     - name: Deploy to EdgeOne Pages
       run: npx edgeone pages deploy <outputDirectory> -n <projectName> -t ${{ secrets.EDGEONE_API_TOKEN }} [-e <env>]
       env:
-          EDGEONE_API_TOKEN: ${{ secrets.EDGEONE_API_TOKEN }}
+          EDGEONE_API_TOKEN: ${{ secrets.EDGEONE_API_TOKEN }}        
+
           
   deploy-github-pages:
     runs-on: ubuntu-latest
@@ -51,3 +63,5 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
+
+      
