--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -41,7 +41,7 @@ jobs:
       run: npm run build
         
     - name: Deploy to EdgeOne Pages
-      run: npx edgeone pages deploy <outputDirectory> -n <projectName> -t ${{ secrets.EDGEONE_API_TOKEN }} [-e <env>]
+      run: npx edgeone pages deploy ./public -n blog -t ${{ secrets.EDGEONE_API_TOKEN }} [-e <env>]
       env:
           EDGEONE_API_TOKEN: ${{ secrets.EDGEONE_API_TOKEN }}        
 
