--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
       pages: write
       id-token: write
     
