--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -57,6 +57,7 @@ jobs:
     needs: build
     permissions:
       pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
