--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -7,13 +7,11 @@ on:
     branches: [ main ]
   workflow_dispatch:  # 允许手动触发
 
+permissions: write-all  # 所有权限
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
     
     steps:
     - name: Checkout repository
@@ -55,9 +53,6 @@ jobs:
   github-pages:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
