--- a/hugo.toml
+++ b/hugo.toml
@@ -21,7 +21,7 @@ theme = 'LoveIt-0.3.0'
   [[menu.main]]
     identifier = "posts"
     name = "posts"
-    url = "/content/posts/"
+    url = "/posts/"
     weight = 2
   [[menu.main]]
     identifier = "installation"
