--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,7 @@ theme = 'LoveIt-0.3.0'
   site_logo = ""
   description = "The last theme you'll ever need"
   body_classes = "avenir bg-near-white"
+  uglyURLs = true
 # baseURLCanDisable = true
 
 # Menu Configuration
